# SQLift

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
migrations/: 001_create_test_table.sql  002_add_name_to_test_table.sql  002_second_migration.sql  003_delete_name_from_test_table.sql  003_third_migration.sql  004_create_multiple_tables_at_once.sql
sqlift/: __init__.py  clients.py  main.py  migrations.py
sqlift/clients/: client.py  sqlite.py
tests/: asserts.py  conftest.py  test_down.py  test_migrations.py  test_up.py
