[tool.poetry]
name = "SQLift"
version = "0.1.0"
description = "Simple migration tool for SQL databases"
license = "MIT"
authors = ["SpaceShaman <spaceshaman@tuta.io>"]
readme = "README.md"
homepage = "https://github.com/SpaceShaman/SQLift"
repository = "https://github.com/SpaceShaman/SQLift"
documentation = "https://github.com/SpaceShaman/SQLift"

[tool.poetry.dependencies]
python = ">=3.10.0,<4.0.0"
psycopg = {extras = ["binary"], version = "^3.2.3"}
typer = "^0.15.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
ruff = "^0.5.1"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
